--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ APP_ENVIRONMENT=Development
 DEBUG=True
 ALLOWED_HOSTS="localhost 127.0.0.1"
 SECRET_KEY=purple-unicorn-123098
+
+DB_HOST=127.0.0.1
+DB_USER=postgres
+DB_NAME=test_project_db
+DB_PASSWORD=postgres
