--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_ENVIRONMENT=Development
-DEBUG=False
+DEBUG=True
 ALLOWED_HOSTS="localhost 127.0.0.1"
 SECRET_KEY=purple-unicorn-123098
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_USER=postgres
 DB_NAME=test_project_db
 DB_PASSWORD=postgres
