--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ DB_HOST=localhost
 DB_USER=postgres
 DB_NAME=test_project_db
 DB_PASSWORD=postgres
+
+CLOUDINARY_CLOUD_NAME=hfk4mh1bt
+CLOUDINARY_API_KEY=839599215536153
+CLOUDINARY_API_SECRET=QIW9k7sQrXEbWtTeRtQqEa5G54
