--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DEBUG=True
 ALLOWED_HOSTS="localhost 127.0.0.1"
 SECRET_KEY=purple-unicorn-123098
 
-DB_HOST=localhost
+DB_HOST=test-project-app2.herokuapp.com
 DB_USER=postgres
 DB_NAME=test_project_db
 DB_PASSWORD=postgres
